add GET note endpoint
